--- a/src/main/resources/templates/login/jo_login.html
+++ b/src/main/resources/templates/login/jo_login.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JO-JOHA(Login)</title>
+    <link rel="stylesheet" href="/css/jo_login.css">
 </head>
 
-<body>
-    <div th:replace="fragment/topPage :: topPageHeader"></div>
 
-</body>
+
+<div th:replace="fragment/topPageLogin :: topPageHeaders"></div>
+<div class="middle">
+    <div class="loginBox">
+        <div class="loginBoxOne">
+            JO-JOHA
+        </div>
+        <div class="loginBoxTwo"></div>
+    </div>
+</div>
+
 
 </html>
