--- a/src/main/resources/templates/fragment/topPageLogin.html
+++ b/src/main/resources/templates/fragment/topPageLogin.html
@@ -9,14 +9,14 @@
 <link rel="stylesheet" href="/css/topPage.css">
 
 <body>
-    <header th:fragment="topPageHeader">
+    <header th:fragment="topPageHeaders">
         <div class="spacer"></div>
         <div class="title">
             <h1>JO-JOHA</h1>
         </div>
         <div class="titleSpacer"></div>
 
-        <button class="login-btn" onclick="location.href='/login/jo_login'">로그인/회원가입</button>
+        <div class="login-btn"></div>
         <div class="login-btnSpacer1"></div>
         <!-- 햄버거 메뉴 -->
         <div class="hamburger">
