--- a/src/main/resources/static/css/jo_login.css
+++ b/src/main/resources/static/css/jo_login.css
@@ -116,7 +116,7 @@ header {
 
 .loginBox {
     width: 34%;
-    height: 70%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -127,19 +127,21 @@ header {
 
 .loginBoxOne {
     width: 100%;
-    height: 30%;
+    height: 20%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 220%;
     color: dodgerblue;
+    font-weight: bold;
+    border-bottom: 1px solid #ddd;
 
 }
 
 .loginBoxTwo {
     width: 100%;
-    height: 70%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
