--- a/src/main/resources/static/css/jo_login.css
+++ b/src/main/resources/static/css/jo_login.css
@@ -116,7 +116,7 @@ header {
 
 .loginBox {
     width: 34%;
-    height: 80%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -139,12 +139,317 @@ header {
 
 }
 
+/* 로그인 버튼들 구성 */
+
 .loginBoxTwo {
     width: 100%;
     height: 80%;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+
+}
+
+.kakao-login-btn {
+    border: none;
+    /* 버튼 테두리 제거 */
+    background: none;
+    /* 버튼 배경 제거 */
+    padding: 0;
+    /* 내부 여백 제거 */
+    cursor: pointer;
+    /* 마우스 포인터 변경 */
+    width: 80%;
+}
+
+.kakao-login-btn img {
+    display: block;
+    width: 100%;
+    min-width: 244px;
+    /* 이미지 크기 조정 */
+    height: 100%;
+    /* 비율 유지 */
+    max-height: 50px;
+}
+
+.naver-login-btn {
+    border: none;
+    /* 버튼 테두리 제거 */
+    background: none;
+    /* 버튼 배경 제거 */
+    padding: 0;
+    /* 내부 여백 제거 */
+    cursor: pointer;
+    /* 마우스 포인터 변경 */
+    width: 80%;
+}
+
+.naver-login-btn img {
+    display: block;
+    width: 16%;
+    /* 이미지 크기 조정 */
+    height: 100%;
+    /* 비율 유지 */
+    max-height: 50px;
+}
+
+.gleenButton {
+    width: 100%;
+    height: 50px;
+    background-color: #03C75A;
+    color: white;
+    border: 1px solid #03C75A;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+
+.naverLoginText {
+    width: 84%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    padding: 0 9% 0 0;
+
+}
+
+
+#customBtn {
+    display: inline-block;
+    background: white;
+    color: #444;
+    width: 190px;
+    border-radius: 5px;
+    border: thin solid #888;
+    box-shadow: 1px 1px 1px grey;
+    white-space: nowrap;
+}
+
+#customBtn:hover {
+    cursor: pointer;
+}
+
+/* 여기부터 구글버튼 */
+.gsi-material-button {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -webkit-appearance: none;
+    background-color: WHITE;
+    background-image: none;
+    border: 1px solid #747775;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #1f1f1f;
+    cursor: pointer;
+    font-family: 'Roboto', arial, sans-serif;
+    font-size: 14px;
+    max-height: 50px;
+    height: 100%;
+    letter-spacing: 0.25px;
+    outline: none;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    -webkit-transition: background-color .218s, border-color .218s, box-shadow .218s;
+    transition: background-color .218s, border-color .218s, box-shadow .218s;
+    vertical-align: middle;
+    white-space: nowrap;
+    width: auto;
+    max-width: 80%;
+    min-width: 80%;
+}
+
+.gsi-material-button .gsi-material-button-icon {
+    height: 50px;
+
+    min-width: 16%;
+    display: flex;
     justify-content: center;
     align-items: center;
 
+}
+
+.gsi-material-button-content-wrapper {
+    width: 100%;
+    height: 100%;
+}
+
+.gsi-material-button .gsi-material-button-content-wrapper {
+    -webkit-align-items: center;
+    align-items: center;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    height: 100%;
+    justify-content: space-between;
+    position: relative;
+    width: 100%;
+}
+
+.gsi-material-button .gsi-material-button-contents {
+    -webkit-flex-grow: 1;
+    flex-grow: 1;
+    font-family: 'Roboto', arial, sans-serif;
+    font-weight: 500;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: top;
+    padding: 0 8% 0 0;
+}
+
+.gsi-material-button .gsi-material-button-state {
+    -webkit-transition: opacity .218s;
+    transition: opacity .218s;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.gsi-material-button:disabled {
+    cursor: default;
+    background-color: #ffffff61;
+    border-color: #1f1f1f1f;
+}
+
+.gsi-material-button:disabled .gsi-material-button-contents {
+    opacity: 38%;
+}
+
+.gsi-material-button:disabled .gsi-material-button-icon {
+    opacity: 38%;
+}
+
+.gsi-material-button:not(:disabled):active .gsi-material-button-state,
+.gsi-material-button:not(:disabled):focus .gsi-material-button-state {
+    background-color: #303030;
+    opacity: 12%;
+}
+
+.gsi-material-button:not(:disabled):hover {
+    -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
+}
+
+.gsi-material-button:not(:disabled):hover .gsi-material-button-state {
+    background-color: #303030;
+    opacity: 8%;
+}
+
+/* 여기까지 */
+/* 여기부터는 이메일 */
+
+.email-login-btn {
+    border: none;
+    /* 버튼 테두리 제거 */
+    background: none;
+    /* 버튼 배경 제거 */
+    padding: 0;
+    /* 내부 여백 제거 */
+    cursor: pointer;
+    /* 마우스 포인터 변경 */
+    width: 80%;
+    min-height: 50px;
+    display: flex;
+    background-color: #2196F3;
+    /* 정확한 파란색 배경 */
+    /* 파란색 배경 */
+    /* 파란색 배경 */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* 그림자 효과 */
+    border-radius: 4px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.email-login-btn-box img {
+    display: block;
+    width: 90%;
+    /* 이미지 크기 조정 */
+    height: 100%;
+    /* 비율 유지 */
+}
+
+.email-login-btn-function {
+    width: 84%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    padding: 0 9% 0 0;
+}
+
+.email-login-btn-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16%;
+    height: 100%;
+}
+
+/* 애플버튼 */
+.apple-login-btn {
+    border: none;
+    /* 버튼 테두리 제거 */
+    background: none;
+    /* 버튼 배경 제거 */
+    padding: 0;
+    /* 내부 여백 제거 */
+    cursor: pointer;
+    /* 마우스 포인터 변경 */
+    width: 80%;
+    min-height: 50px;
+    max-height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: #000000;
+    /* 정확한 파란색 배경 */
+    /* 파란색 배경 */
+    /* 파란색 배경 */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* 그림자 효과 */
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.appleid-signin {
+    width: 16%;
+    height: 100%;
+}
+
+.apple-login-btn-image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.apple-login-box {
+    width: 84%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    padding: 0 9% 0 0;
+    color: white
 }
