--- a/src/main/resources/templates/license-modal.html
+++ b/src/main/resources/templates/license-modal.html
@@ -10,6 +10,10 @@
 <body>
     <a href="https://www.flaticon.com/free-icons/email" title="email icons">Email icons created by Fathema Khanom -
         Flaticon</a>
+    <a href="https://www.flaticon.com/free-icons/login" title="login icons">Login icons created by Freepik -
+        Flaticon</a>
+    <a href="https://www.flaticon.com/free-icons/login" title="login icons">Login icons created by Uniconlabs -
+        Flaticon</a>
 </body>
 
 </html>
