--- a/src/main/resources/templates/login/jo_login.html
+++ b/src/main/resources/templates/login/jo_login.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JO-JOHA(Login)</title>
     <link rel="stylesheet" href="/css/jo_login.css">
+
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <script src="/js/jquery-3.7.1.min.js"></script>
 </head>
 
 
@@ -70,10 +73,18 @@
                 </div>
 
             </button>
+            <button class="jo-joha-login-btn">
+                <div class="jo-joha-signin">
+                    <img src="/image/user.png" alt="JO-JOHA Login Button" class="jo-joha-login-btn-image">
+                </div>
+                <div class="jo-joha-login-box">
+                    <p>JO-JOHA 로그인</p>
+                </div>
+            </button>
         </div>
 
     </div>
 </div>
-
+<script src="/js/jo-joha.js"></script>
 
 </html>
