--- a/src/main/resources/templates/fragment/top-page.html
+++ b/src/main/resources/templates/fragment/top-page.html
@@ -16,7 +16,7 @@
         </div>
         <div class="titleSpacer"></div>
 
-        <button class="login-btn" onclick="location.href='/login/jo_login'">로그인/회원가입</button>
+        <button class="login-btn" onclick="location.href='/login/jo-login'">로그인/회원가입</button>
         <div class="login-btnSpacer1"></div>
         <!-- 햄버거 메뉴 -->
         <div class="hamburger">
