--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,7 +7,7 @@
     <title>JO-JOHA</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
-<div th:replace="fragment/topPage :: topPageHeader"></div>
+<div th:replace="fragment/top-page :: topPageHeader"></div>
 <div class="middle">
     <div class="mainImg">
 
