--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JO-JOHA</title>
     <link rel="stylesheet" href="/css/main.css">
+    <script src="/js/jquery-3.7.1.min.js"></script>
+
 </head>
 <div th:replace="~{fragment/top-page :: topPageHeader}"></div>
 <div class="middle">
@@ -20,5 +22,5 @@
 <body>
 
 </body>
-
+<script src="/js/main.js"></script>
 </html>
