--- a/src/main/resources/templates/login/jo-login.html
+++ b/src/main/resources/templates/login/jo-login.html
@@ -10,9 +10,14 @@
     <link rel="stylesheet" href="/css/jo_login.css">
     <script src="/js/jquery-3.7.1.min.js"></script>
 
+    <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
+
+
+
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.5/kakao.min.js"
             integrity="sha384-dok87au0gKqJdxs7msEdBPNnKSRT+/mhTVzq+qOhcL464zXwvcrpjeWvyj1kCdq6"
             crossorigin="anonymous"></script>
+
 </head>
 
 
@@ -26,7 +31,7 @@
             <button class="kakao-login-btn">
                 <img src="/image/kakao_login (1)/ko/kakao_login_large_wide.png" alt="Kakao Login Button">
             </button>
-            <button class="naver-login-btn">
+            <button class="naver-login-btn" >
                 <div class="gleenButton">
                     <img src="/image/2021_Login_with_naver_guidelines_Kr/btnG_아이콘사각.png" alt="Naver Login Button">
                     <div class="naverLoginText">
