--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JO-JOHA</title>
     <link rel="stylesheet" href="/css/main.css">
-    <script src="/js/jquery-3.7.1.min.js"></script>
+    <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
 
+    <script src="/js/jquery-3.7.1.min.js"></script>
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.5/kakao.min.js"
+            integrity="sha384-dok87au0gKqJdxs7msEdBPNnKSRT+/mhTVzq+qOhcL464zXwvcrpjeWvyj1kCdq6"
+            crossorigin="anonymous"></script>
 </head>
 <div th:replace="~{fragment/top-page :: topPageHeader}"></div>
 <div class="middle">
