--- a/src/main/resources/templates/login/jo-login.html
+++ b/src/main/resources/templates/login/jo-login.html
@@ -64,12 +64,7 @@
                     <span style="display: none;">Sign in with Google</span>
                 </div>
             </button>
-            <button class="email-login-btn">
-                <div class="email-login-btn-box">
-                    <img src="/image/mail.png" alt="Email Login Button">
-                </div>
-                <div class="email-login-btn-function">이메일로 로그인</div>
-            </button>
+
             <button class="apple-login-btn">
                 <div class="appleid-signin">
                     <img src="/image/appleid_button@2x (2).png" alt="Apple Login Button" class="apple-login-btn-image">
@@ -78,6 +73,12 @@
                     <p>애플 로그인</p>
                 </div>
 
+            </button>
+            <button class="email-login-btn">
+                <div class="email-login-btn-box">
+                    <img src="/image/mail.png" alt="Email Login Button">
+                </div>
+                <div class="email-login-btn-function">JO-JOHA 회원가입</div>
             </button>
             <button class="jo-joha-login-btn">
                 <div class="jo-joha-signin">
