--- a/src/main/resources/templates/license-modal.html
+++ b/src/main/resources/templates/license-modal.html
@@ -8,12 +8,20 @@
 </head>
 
 <body>
-    <a href="https://www.flaticon.com/free-icons/email" title="email icons">Email icons created by Fathema Khanom -
-        Flaticon</a>
-    <a href="https://www.flaticon.com/free-icons/login" title="login icons">Login icons created by Freepik -
-        Flaticon</a>
-    <a href="https://www.flaticon.com/free-icons/login" title="login icons">Login icons created by Uniconlabs -
-        Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/email" title="email icons">Email icons created by Fathema Khanom -
+    Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/login" title="login icons">Login icons created by Freepik -
+    Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/login" title="login icons">Login icons created by Uniconlabs -
+    Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/kakao-talk" title="kakao talk icons">Kakao talk icons created by Fathema
+    Khanom - Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/kakao-talk" title="kakao talk icons">Kakao talk icons created by Fathema
+    Khanom - Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/letter-n" title="letter n icons">Letter n icons created by riajulislam -
+    Flaticon</a><a href="https://www.flaticon.com/free-icons/google" title="google icons">Google icons created by
+    Freepik - Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/mac" title="mac icons">Mac icons created by Hight Quality Icons - Flaticon</a><a href="https://www.flaticon.com/free-icons/google" title="google icons">Google icons created by Alfredo Creates - Flaticon</a>
 </body>
 
 </html>
