--- a/src/main/resources/templates/login/jo-joha-login.html
+++ b/src/main/resources/templates/login/jo-joha-login.html
@@ -17,17 +17,17 @@
             <tr class="tr"></tr>
             <tr class="jo-joha-join-modal-middle-table-tr">
                 <td class="jo-joha-join-modal-middle-table-tr-td-one"><input type="text" placeholder="  아이디"
-                                                                             class="table-tr-td-one-input-id"></td>
+                                                                             class="table-tr-td-one-input-id" id="id"></td>
             </tr>
             <tr class="tr"></tr>
             <tr class="jo-joha-join-modal-middle-table-tr">
                 <td class="jo-joha-join-modal-middle-table-tr-td-one"><input type="text" placeholder="  비밀번호"
-                                                                             class="table-tr-td-one-input-pw"></td>
+                                                                             class="table-tr-td-one-input-pw" id="pw"></td>
             </tr>
             <tr class="tr"></tr>
             <tr class="jo-joha-join-modal-middle-table-tr">
                 <td class="jo-joha-join-modal-middle-table-tr-td-one"><input type="text" placeholder="  닉네임"
-                                                                             class="table-tr-td-one-input-nickname">
+                                                                             class="table-tr-td-one-input-nickname" id="nickname">
                 </td>
 
             </tr>
@@ -35,12 +35,12 @@
 
             <tr class="jo-joha-join-modal-middle-table-tr">
                 <td class="jo-joha-join-modal-middle-table-tr-td-one"><input type="text" placeholder="  이메일"
-                                                                             class="table-tr-td-one-input-email"></td>
+                                                                             class="table-tr-td-one-input-email" id="email"></td>
             </tr>
             <tr class="tr"></tr>
             <tr class="jo-joha-join-modal-middle-table-tr">
                 <td class="jo-joha-join-modal-middle-table-tr-td-one"><input type="text" placeholder="  가상이름"
-                                                                             class="table-tr-td-one-input-name"></td>
+                                                                             class="table-tr-td-one-input-name" id="name"></td>
             </tr>
             <tr class="tr"></tr>
 
