--- a/src/main/resources/templates/license-modal.html
+++ b/src/main/resources/templates/license-modal.html
@@ -22,6 +22,7 @@
     Flaticon</a><a href="https://www.flaticon.com/free-icons/google" title="google icons">Google icons created by
     Freepik - Flaticon</a>
 <a href="https://www.flaticon.com/free-icons/mac" title="mac icons">Mac icons created by Hight Quality Icons - Flaticon</a><a href="https://www.flaticon.com/free-icons/google" title="google icons">Google icons created by Alfredo Creates - Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/button" title="button icons">Button icons created by Freepik - Flaticon</a>
 </body>
 
 </html>
