--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -62,6 +62,56 @@ header {
     cursor: pointer;
     /* 마우스 포인터 변경 */
 }
+.img{
+    display: none;
+}
+@media(max-width:1199px) {
+
+    .login-btn {
+        height: 41px;
+
+        width: 12%;
+        font-size: 0.8rem;
+        padding: 0.5rem 1rem;
+        background-color: white;
+        /* 혹은 아이콘만 보여주는 식도 가능 */
+        color: black;
+    }
+
+}
+
+@media(max-width:1023px) {
+
+    .login-btn {
+        display: none;
+    }
+    .loginImage{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 12%;
+        height:100%;
+        max-height: 200px;
+        cursor: pointer;
+
+    }
+
+    .img{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        height: 50%;
+        max-height:41px;
+        margin-left: 30%;
+        border: 1px solid dodgerblue;
+        background-color: dodgerblue;
+        color: white;
+        font-size: 12px;
+        border-radius: 8px;
+    }
+
+}
 
 .login-btn:hover {
     background-color: #f9f9f9;
