--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,18 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JO-JOHA</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/topPage.css">
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+            integrity="sha512-..."
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+    />
     <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
 
     <script src="/js/jquery-3.7.1.min.js"></script>
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.5/kakao.min.js"
             integrity="sha384-dok87au0gKqJdxs7msEdBPNnKSRT+/mhTVzq+qOhcL464zXwvcrpjeWvyj1kCdq6"
             crossorigin="anonymous"></script>
+
+
 </head>
 <div th:replace="~{fragment/top-page :: topPageHeader}"></div>
 <div class="middle">
     <div class="mainImg">
 
-        <img class="image" src="\image\beach-landscape-sea-coast-tree-water-1138100-pxhere.com.jpg" alt="Main">
+        <img class="image" src="/image/beach-landscape-sea-coast-tree-water-1138100-pxhere.com.jpg" alt="Main">
         <div></div>
         </img>
     </div>
