메뉴구성중

--- a/src/main/resources/templates/fragment/top-page-login.html
+++ b/src/main/resources/templates/fragment/top-page-login.html
@@ -11,7 +11,7 @@
 <body>
     <header th:fragment="topPageHeaders">
         <div class="spacer"></div>
-        <div class="title">
+        <div class="title" onclick="location.href='/main'">
             <h1>JO-JOHA</h1>
         </div>
         <div class="titleSpacer"></div>
