--- a/src/main/resources/templates/fragment/top-page.html
+++ b/src/main/resources/templates/fragment/top-page.html
@@ -11,8 +11,8 @@
 <body>
     <header th:fragment="topPageHeader">
         <div class="spacer"></div>
-        <div class="title">
-            <h1>JO-JOHA</h1>
+        <div class="title" onclick="location.href='/main'">
+            <h1 onclick="location.href='/main'">JO-JOHA</h1>
         </div>
         <div class="titleSpacer"></div>
 
