--- a/src/main/resources/templates/login/jo-login.html
+++ b/src/main/resources/templates/login/jo-login.html
@@ -102,6 +102,6 @@
 
 </div>
 <div th:replace="/login/jo-joha-real-login.html :: real-login"></div>
-<script src="/js/jo-joha.js?v=1.0.1"></script>
+<script src="/js/loginJS/jo-joha.js?v=1.0.1"></script>
 
 </html>
