--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -32,9 +32,10 @@
         </img>
     </div>
 </div>
-
+<div th:replace="~{menu/sideMenu.html :: JO-JOHA-DRAWMENU}"></div>
 <body>
 
 </body>
-<script src="/js/main.js"></script>
+<script src="/js/mainJs/main.js"></script>
+<script src="/js/mainJs/DrawMenuJS.js"></script>
 </html>
