--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -14,6 +14,16 @@ html {
     /* 전체 높이 */
 }
 
+
+
+/* header 높이만큼 본문 밀어주기 */
+body {
+    margin: 0;
+    padding-top: 63px; /* header 높이에 맞게 조정 */
+}
+
+
+
 .spacer {
     width: 8%;
     /* 남은 공간을 차지 */
@@ -23,6 +33,7 @@ html {
 .title {
     width: 20%;
     color: dodgerblue;
+    cursor: pointer;
 }
 
 .titleSpacer {
@@ -30,20 +41,18 @@ html {
 }
 
 header {
-    height: 2%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 63px; /* 고정 높이 */
     display: flex;
     flex-direction: row;
     justify-content: start;
-    /* 양쪽 끝으로 배치 */
     align-items: center;
-    /* 세로 가운데 정렬 */
     background-color: white;
-    /* 배경색 */
-    /* 내부 여백 */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border: 1px solid #ddd;
-    /* 테두리 */
-    /* 그림자 효과 */
-
 }
 
 /* 로그인/회원가입 버튼 스타일 */
@@ -100,7 +109,7 @@ header {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 50%;
+        width: 70%;
         height: 50%;
         max-height:41px;
         margin-left: 30%;
@@ -181,4 +190,88 @@ header {
     object-fit: cover;
     /* 이미지 비율 유지 및 컨테이너에 맞게 채우기 */
 
+}
+
+/*사이드 메뉴 css*/
+
+.menu-background{
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color:  rgba(0, 0, 0, 0.5);
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+    justify-content: end;
+    align-items: end;
+}
+.menu-bar{
+    display:none;
+    position: fixed;
+    top: 0;
+
+}
+
+.menu-background-modal{
+    display: flex;
+    flex-direction: column;
+    width: 360px;
+    height: 100%;
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+    justify-content: start;
+    align-items: start;
+    position: absolute;
+}
+
+.modal-category{
+    width: 100%;
+    height: 63px;
+    display: flex;
+    justify-content: start;
+    padding-left: 30px;
+    align-items: center;
+    border: 1px solid #ddd;
+}
+
+.modal-category p{
+    font-size: 1.5rem;
+    font-weight: bolder;
+    color: dodgerblue;
+}
+
+.modal-list-menu{
+    width: 100%;
+    height: calc(100% - 63px);
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+}
+
+.menu-table{
+    width: 100%;
+    height: 100%;
+    border-collapse: collapse;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+[class^="table-"]{
+    width: 80%;
+    height: 30%;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
+.table-3{
+    width: 80%;
+    height: 10%;
+    border: 1px solid #ddd;
+    border-radius: 8px;
 }
